feat: add instructor student listing endpoint and document instructor students and list of applications APIs
